--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 /target
 Cargo.lock
 **/*.rs.bk
+TODO.md
+.DS_Store
+.idea
+.vscode
+archive/
+/archive/
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
